corrected test cases and style property dropdown align

--- a/ui/src/app/components/headers/headers.component.scss
+++ b/ui/src/app/components/headers/headers.component.scss
@@ -49,7 +49,7 @@
   z-index: 1;
   top: 100%;
   margin-top: 9px;
-  margin-left: -40px;
+  right: 0;
   cursor: pointer;
   width: 150px
 }
@@ -69,10 +69,4 @@
 .dropdown-menu-item:hover {
   background: #2B35A8;
   color: white;
-}
-
-@media only screen and (max-width: 576px) {
-  .dropdown-menu-container {
-    margin-left: -110px;
-  }
 }
